Dodawanie listy zakupów wraz z przedmiotami
